<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="@android:color/background_dark"
    android:padding="0dp">

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:padding="0dp" />

    <RelativeLayout
        android:id="@+id/controls_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/zoom_ratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/camera_change"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/progress"
            android:text="@string/zoom_changed_caption"
            android:textColor="@android:color/darker_gray" />

        <ImageButton
            android:id="@+id/camera_change"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/change_camera_caption"
            android:src="@android:drawable/ic_menu_rotate" />

        <ImageButton
            android:id="@+id/capture"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/take_a_picture_caption"
            android:src="@android:drawable/ic_menu_camera" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/capture"
            android:layout_alignTop="@id/capture"
            android:layout_alignEnd="@id/capture"
            android:layout_alignBottom="@id/capture"
            android:visibility="gone" />


        <ImageButton
            android:id="@+id/camera_settings"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@null"
            android:baselineAlignBottom="false"
            android:clickable="false"
            android:contentDescription="@string/settings_caption"
            android:cropToPadding="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@android:drawable/ic_menu_manage" />

        <ImageButton
            android:id="@+id/native_reset"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_below="@+id/progress"
            android:layout_alignStart="@+id/camera_settings"
            android:background="@null"
            android:clickable="false"
            android:contentDescription="@string/reset_caption"
            android:cropToPadding="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@android:drawable/ic_menu_delete" />

    </RelativeLayout>

</RelativeLayout>
